...
            android:layout_height="133dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="78dp" />

        <Button
            android:id="@+id/leftButton"
            android:layout_width="43dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:text="@string/arrow_left"
            app:layout_constraintEnd_toStartOf="@+id/carSelectionSurfaceView"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="selectedCarIndexDecrease"
            tools:layout_editor_absoluteY="127dp" />

        <Button
            android:id="@+id/rightButton"
            android:layout_width="43dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:text="@string/arrow_right"
            android:onClick="selectedCarIndexIncrease"
            app:layout_constraintEnd_toEndOf="parent"
...
